<resources>
    <string name="app_name">My Pill</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Логин</string>
    <string name="Password">Пароль</string>
    <string name="Input">Вход</string>
    <string name="Registration">Регистрация</string>
    <string name="MemorizeUser">Запомнить</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_registration">Registration</string>
</resources>